--- a/css/usuario-home.css
+++ b/css/usuario-home.css
@@ -70,7 +70,7 @@ main {
     max-height: 340px;
     transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
-    overflow: hidden;  /* Garante que a imagem não ultrapasse o contêiner */
+    overflow: hidden;  
 }
 
 .img-ong {
@@ -114,49 +114,49 @@ main {
 }
 
 .card-doador {
-    background-color: white;  /* Altera o fundo para branco */
-    width: 90%;  /* Aumenta a largura para ser mais espaçoso */
-    max-width: 300px; /* Limita a largura máxima */
-    height: 250px;  /* Ajusta a altura para uma forma mais equilibrada */
+    background-color: white; 
+    width: 90%;  
+    max-width: 300px; 
+    height: 250px; 
     border: 2px solid #FFA114;
-    border-radius: 15px; /* Bordas mais suaves */
+    border-radius: 15px; 
     text-align: center;
-    padding: 1.5rem; /* Ajusta o padding interno */
-    transition: all 0.3s ease; /* Efeito suave de transição */
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Adiciona sombra suave */
+    padding: 1.5rem; 
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); 
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Garante que o conteúdo fique espaçado */
+    justify-content: space-between;
 }
 
 .card-doador p {
-    font-size: 1.1rem; /* Ajusta o tamanho da fonte */
-    color: #333;  /* Cor do texto */
-    font-family: 'Arial', sans-serif; /* Fonte mais limpa */
-    line-height: 1.4; /* Melhor espaçamento entre as linhas */
-    margin: 0; /* Remove margens extras */
-    flex-grow: 1; /* Faz o texto ocupar o restante do espaço disponível */
+    font-size: 1.1rem; 
+    color: #333;  
+    font-family: 'Arial', sans-serif; 
+    line-height: 1.4; 
+    margin: 0; 
+    flex-grow: 1;
 }
 
 .card-doador .nome-autor {
-    font-weight: bold; /* Nome em negrito */
-    margin-top: 1.5rem; /* Espaço do texto principal para o nome */
-    font-size: 1.2rem; /* Ajusta o tamanho do nome */
-    color: #333; /* Cor do texto */
+    font-weight: bold; 
+    margin-top: 1.5rem; 
+    font-size: 1.2rem;
+    color: #333; 
 }
 
 .card-doador:hover {
-    transform: translateY(-5px); /* Efeito de elevação suave ao passar o mouse */
-    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2); /* Aumenta a sombra no hover */
-    cursor: pointer; /* Adiciona o cursor de mão */
+    transform: translateY(-5px); 
+    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2); 
+    cursor: pointer; 
 }
 
 .card-doador img {
-    max-width: 80%;  /* Limita a largura da imagem */
-    max-height: 50%; /* Limita a altura da imagem */
-    object-fit: cover; /* Garante que a imagem preencha sem distorcer */
-    border-radius: 50%; /* Torna a imagem redonda */
-    margin-bottom: 1rem; /* Adiciona espaçamento abaixo da imagem */
+    max-width: 80%; 
+    max-height: 50%; 
+    object-fit: cover; 
+    border-radius: 50%; 
+    margin-bottom: 1rem; 
 }
 
 
