--- a/css/usuario-contato.css
+++ b/css/usuario-contato.css
@@ -65,6 +65,27 @@ form {
     font-weight: bold;
 }
 
+.message-container {
+    position: fixed; /* Fixa no viewport */
+
+
+    z-index: 1000; /* Garante que fique acima de outros elementos */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.success-message,
+.error-message {
+    animation: fadeIn 0.5s ease-in-out;
+    width: 50%; 
+    max-width: 500px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 1%;
+}
 
 .error-message {
     background-color: #ffeaea;
@@ -81,6 +102,7 @@ form {
     margin-right: 10px;
     font-weight: bold;
 }
+
 
 @keyframes fadeIn {
     from {
