--- a/css/usuario-login.css
+++ b/css/usuario-login.css
@@ -140,6 +140,72 @@ main {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.success-message {
+    background-color: #e6f4ea;
+    color: #1e7e34;
+    border: 1px solid #c3e6cb;
+    padding: 10px;
+    margin-top: 15px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.success-message::before {
+    content: '✓';
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.message-container {
+    position: fixed; /* Fixa no viewport */
+
+
+    z-index: 1000; /* Garante que fique acima de outros elementos */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.success-message,
+.error-message {
+    animation: fadeIn 0.5s ease-in-out;
+    width: 50%; 
+    max-width: 500px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 1%;
+}
+
+.error-message {
+    background-color: #ffeaea;
+    color: #dc3545;
+    border: 1px solid #f5c6cb;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.error-message::before {
+    content: '✕';
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @media (max-width: 768px) {
     main {
         padding: 2rem;
