--- a/css/adm-respostas.css
+++ b/css/adm-respostas.css
@@ -22,12 +22,13 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-top: 3rem;
     padding: 20px;
-    margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
+    
 }
 
 
