--- a/css/todos-ong.css
+++ b/css/todos-ong.css
@@ -142,7 +142,6 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     .button-container {
         flex-direction: column; 
@@ -157,7 +156,6 @@
 
 
 
-/* Box que agrupa os campos de valor e ONG */
 .donation-input-box {
     width: 100%;
     background-color: #F9F9F9;
@@ -249,7 +247,6 @@ select {
 }
 
 
-/* Responsividade */
 @media (max-width: 768px) {
     .container {
         padding: 10px; 
@@ -349,7 +346,7 @@ input:disabled {
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    display: none; /* Oculto por padrão */
+    display: none; 
 }
 
 .popup-box {
