--- a/css/usuario-login.css
+++ b/css/usuario-login.css
@@ -157,10 +157,10 @@ main {
 }
 
 .message-container {
-    position: fixed; /* Fixa no viewport */
+    position: fixed; 
 
 
-    z-index: 1000; /* Garante que fique acima de outros elementos */
+    z-index: 1000; 
     display: flex;
     flex-direction: column;
     align-items: center;
