--- a/css/adm-editar-ong.css
+++ b/css/adm-editar-ong.css
@@ -14,6 +14,7 @@ h1.title {
     text-align: center;
 }
 
+/* Estilos do formulário */
 form {
     display: flex;
     flex-direction: column;
@@ -46,6 +47,7 @@ input[type="date"]:focus {
     outline: none;
 }
 
+/* Botões */
 button {
     padding: 10px 20px;
     font-size: 16px;
