--- a/css/todos-cadastrar.css
+++ b/css/todos-cadastrar.css
@@ -95,6 +95,7 @@ form {
     color: #999;
 }
 
+/* Campos que devem ocupar linha inteira */
 .input-group:has(input[type="email"]),
 .input-group:has(input[type="password"]),
 .input-group:has(input#cnpj),
@@ -104,6 +105,7 @@ form {
     grid-column: 1 / -1;
 }
 
+/* Seção de senha */
 .password-section {
     grid-column: 1 / -1;
     display: grid;
@@ -111,6 +113,7 @@ form {
     margin-top: 1rem;
 }
 
+/* Botão de registro */
 .register-button {
     grid-column: 1 / -1;
     background-color: #FFA114;
@@ -208,6 +211,7 @@ form {
     }
 }
 
+/* Animações */
 @keyframes fadeIn {
     from {
         opacity: 0;
