--- a/css/adm-respostas.css
+++ b/css/adm-respostas.css
@@ -73,6 +73,7 @@ h1 {
     position: relative; 
     z-index: 1; 
 }
+/* Botões */
 .btn-status {
     padding: 10px 15px;
     background-color: #007bff;
