--- a/css/adm-transferencias.css
+++ b/css/adm-transferencias.css
@@ -141,6 +141,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
+/* Responsividade */
 @media (max-width: 768px) {
     .button-container {
         flex-direction: column; 
