--- a/css/usuario-contato.css
+++ b/css/usuario-contato.css
@@ -66,10 +66,10 @@ form {
 }
 
 .message-container {
-    position: fixed; 
+    position: fixed; /* Fixa no viewport */
 
 
-    z-index: 1000; 
+    z-index: 1000; /* Garante que fique acima de outros elementos */
     display: flex;
     flex-direction: column;
     align-items: center;
